...
            </TouchableOpacity>

            <TouchableOpacity
              style={styles.button}
              activeOpacity={0.7}
              onPress={this.openConversionScreen}
              testID="CurrencyScreenConversionButton"
            >
              <IcoMoon name="conversion" style={styles.buttonIcon} />
              <Text style={styles.buttonText}>{I18n.t('convert')}</Text>
            </TouchableOpacity>
          </View>
        )}
...
