...
            onChangeText={this.props.onAmountChange}
            keyboardType="numeric"
            autoCapitalize="none"
            autoCorrect={false}
            placeholder="0"
            placeholderTextColor="#fff"
            testID="ConversionScreenAmountInput"
            ref={this.fromTextInput}
          />
        </View>

        <View style={styles.bottomBlock}>
          <View style={styles.middleBlock}>
...
