...
      },
      {
        title: I18n.t('send'),
        icon: 'send',
        callback: this.onSend,
        animated: new Animated.Value(0),
        testID: 'BottomTabBarCentralButton_SendButton',
      },
      {
        title: I18n.t('scan-qr'),
        icon: 'scan-qr',
        callback: this.onScanQR,
        animated: new Animated.Value(0),
        testID: 'BottomTabBarCentralButton_ScanQRButton',
      },
    ]

    this.buttons
      .slice()
      .reverse()
...
